--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,6 @@
     <title>Robótica Prática</title>
 </head>
 <body>
-    
+    <h1>Projeto robotica pratica</h1>
 </body>
 </html>
