--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,6 +7,6 @@
     <title>Robótica Prática</title>
 </head>
 <body>
-    <h1>Robotica pratica</h1>
+    <h1>Robotica prática</h1>
 </body>
 </html>
